Правка бейджа у Избранное

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,8 @@ body{
   font-size: 10px;
   line-height: 10px;
   text-align: center;
+  background-color: #7DB54F;
+  color: #ffffff;
 }
 
 .button{
